--- a/BlazorAuthTemplate.Client/Components/Pages/Contacts/Edit.razor
+++ b/BlazorAuthTemplate.Client/Components/Pages/Contacts/Edit.razor
@@ -1,6 +1,6 @@
 ﻿@page "/contacts/edit/{id:int}"
 @attribute [Authorize]
-@rendermode InteractiveServer
+@rendermode InteractiveWebAssembly
 @inject IContactService ContactService
 @inject NavigationManager Nav
 
