--- a/BlazorAuthTemplate.Client/Components/Pages/Contacts/Index.razor
+++ b/BlazorAuthTemplate.Client/Components/Pages/Contacts/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/contacts"
 @attribute [Authorize]
-@rendermode InteractiveServer
+@rendermode InteractiveWebAssembly
 @inject IContactService ContactService
 @inject ICategoryService CategoryService
 @inject NavigationManager Nav
