--- a/BlazorAuthTemplate.Client/_Imports.razor
+++ b/BlazorAuthTemplate.Client/_Imports.razor
@@ -13,3 +13,4 @@
 @using BlazorAuthTemplate.Client.Models
 @using BlazorAuthTemplate.Client.Components.UI
 @using BlazorAuthTemplate.Client.Helpers;
+@using BlazorAuthTemplate.Client.Services
