--- a/BlazorAuthTemplate.Client/Components/Pages/Contacts/Create.razor
+++ b/BlazorAuthTemplate.Client/Components/Pages/Contacts/Create.razor
@@ -1,6 +1,6 @@
 ﻿@page "/contacts/create"
 @attribute [Authorize]
-@rendermode InteractiveWebAssembly
+@rendermode InteractiveAuto
 @inject IContactService ContactService
 @inject NavigationManager Nav
 
