--- a/BlazorAuthTemplate/Components/Layout/TopNavMenu.razor.css
+++ b/BlazorAuthTemplate/Components/Layout/TopNavMenu.razor.css
@@ -14,3 +14,10 @@
 .dropdown:has(.nav-link.active) .dropdown-toggle{
     color: var(--bs-navbar-active-color);
 }
+
+.profile-picture{
+    height: 1.5rem;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    border: solid 1px black;
+}
