--- a/BlazorAuthTemplate.Client/Components/Pages/Contacts/Email.razor
+++ b/BlazorAuthTemplate.Client/Components/Pages/Contacts/Email.razor
@@ -1,5 +1,5 @@
 ﻿@page "/contacts/email/{contactId:int}"
-@rendermode InteractiveWebAssembly
+@rendermode InteractiveAuto
 @attribute [Authorize]
 
 
