added docker support

--- a/BlazorAuthTemplate.Client/Components/UI/ContactCard.razor
+++ b/BlazorAuthTemplate.Client/Components/UI/ContactCard.razor
@@ -1,6 +1,6 @@
 ﻿@if(Contact is not null)
 {
-	<div class="card h-100 shadow-lg mb-3">
+	<div class="card h-100 shadow-lg">
 		<div class="row g-0">
 			<div class="col-12 col-md-4 square-img-container rounded-start overflow-hidden">
 				<img src="@Contact.ImageURL" class="square-img" />
