--- a/BlazorAuthTemplate.Client/Components/UI/ContactCard.razor
+++ b/BlazorAuthTemplate.Client/Components/UI/ContactCard.razor
@@ -28,7 +28,7 @@
 						<div>
 							<a class="me-3" href="/contacts/edit/@Contact.Id"><i class="bi bi-pencil-fill"></i></a>
 							<a class="me-3" href="/contacts/email/@Contact.Id"><i class="bi bi-envelope-fill"></i></a>
-							<a class="me-3" editIcons" role="button" @onclick="() => isDeleting = true"><i class="bi bi-trash-fill text-danger"></i></a>
+							<a class="me-3" role="button" @onclick="() => isDeleting = true"><i class="bi bi-trash-fill text-danger"></i></a>
 						</div>
 					}
 					else
